Added viewport meta tag for dashboard

--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -7,6 +7,7 @@
     <%= favicon_link_tag "blazer/favicon.png" %>
     <%= stylesheet_link_tag "blazer/application" %>
     <%= javascript_include_tag "blazer/application" %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
       <%= blazer_js_var "rootPath", root_path %>
     </script>
