--- a/lib/generators/blazer/templates/config.yml.tt
+++ b/lib/generators/blazer/templates/config.yml.tt
@@ -63,11 +63,11 @@ check_schedules:
 
 # enable anomaly detection
 # note: with trend, time series are sent to https://trendapi.org
-# anomaly_checks: trend / r
+# anomaly_checks: prophet / trend / r
 
 # enable forecasting
 # note: with trend, time series are sent to https://trendapi.org
-# forecasting: trend / prophet
+# forecasting: prophet / trend
 
 # enable map
 # mapbox_access_token: <%%= ENV["MAPBOX_ACCESS_TOKEN"] %>
