Fixed error with multiple maps on dashboard - fixes #365

--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -73,12 +73,14 @@
       <% series_library[1] = {borderDash: [8], borderColor: color, pointBackgroundColor: color, backgroundColor: color, pointHoverBackgroundColor: color} %>
     <% end %>
     <% if blazer_maps? && @markers.any? %>
-      <div id="map" style="height: <%= @only_chart ? 300 : 500 %>px;"></div>
+      <% map_id = SecureRandom.hex %>
+      <%= content_tag :div, nil, id: map_id, style: "height: #{@only_chart ? 300 : 500}px;" %>
       <script>
         <%= blazer_js_var "mapboxAccessToken", Blazer.mapbox_access_token %>
         <%= blazer_js_var "markers", @markers %>
+        <%= blazer_js_var "mapId", map_id %>
         L.mapbox.accessToken = mapboxAccessToken;
-        var map = L.mapbox.map('map')
+        var map = L.mapbox.map(mapId)
           .addLayer(L.mapbox.styleLayer('mapbox://styles/mapbox/streets-v11'));
         var featureLayer = L.mapbox.featureLayer().addTo(map);
         var geojson = [];
