--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -67,7 +67,7 @@
 </div>
 
 <script>
-  <%= blazer_js_var "params", variable_params(@query) %>
+  <%= blazer_js_var "variableParams", variable_params(@query) %>
   <%= blazer_js_var "previewStatement", Hash[Blazer.data_sources.map { |k, v| [k, (v.preview_statement rescue "")] }] %>
 
   var app = new Vue({
@@ -95,7 +95,7 @@
         this.error = false
         cancelAllQueries()
 
-        var data = $.extend({}, params, {statement: this.getSQL(), data_source: $("#query_data_source").val()})
+        var data = {statement: this.getSQL(), data_source: $("#query_data_source").val(), variables: variableParams}
 
         var _this = this
 
