--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -56,7 +56,7 @@
       $("#results").addClass("query-error").html(message)
     }
 
-    <% data = variable_params(@query).merge(statement: @statement, query_id: @query.id, data_source: @query.data_source) %>
+    <% data = {statement: @statement, query_id: @query.id, data_source: @query.data_source, variables: variable_params(@query)} %>
     <% data.merge!(forecast: "t") if params[:forecast] %>
     <%= blazer_js_var "data", data %>
 
