Refactor annotations fetching

--- a/lib/generators/blazer/templates/config.yml.tt
+++ b/lib/generators/blazer/templates/config.yml.tt
@@ -33,8 +33,8 @@ data_sources:
       # user_id: "SELECT id, name FROM users WHERE id IN {value}"
 
     annotations:
-      # box: SELECT min_date, max_date, label FROM holidays WHERE (min_date, max_date) OVERLAPS ({min_date}, {max_date})
-      # line: SELECT date, label FROM deployments WHERE date BETWEEN {min_date} and {max_date}
+      # holiday_boxes: SELECT min_date, max_date, label FROM holidays WHERE (min_date, max_date) OVERLAPS ({min_date}, {max_date})
+      # deployment_lines: SELECT date, label FROM deployments WHERE date BETWEEN {min_date} and {max_date}
 
 # create audits
 audit: true
