read current_user attributes as variables and allow marking users as read-only

--- a/app/views/blazer/_variables.html.erb
+++ b/app/views/blazer/_variables.html.erb
@@ -1,4 +1,4 @@
-<% if @bind_vars.any? %>
+<% if @bind_vars.reject{ |var| restricted_vars.include?(var) }.any? %>
   <% var_params = request.query_parameters %>
   <script>
     <%= blazer_js_var "timeZone", Blazer.time_zone.tzinfo.name %>
