--- a/app/views/blazer/dashboards/show.html.erb
+++ b/app/views/blazer/dashboards/show.html.erb
@@ -9,9 +9,11 @@
           <%= @dashboard.name %>
         </h3>
       </div>
-      <div class="col-sm-3 text-right">
-        <%= link_to "Edit", edit_dashboard_path(@dashboard, params: variable_params(@dashboard)), class: "btn btn-info" %>
-      </div>
+      <%- if write_access? %>
+        <div class="col-sm-3 text-right">
+          <%= link_to "Edit", edit_dashboard_path(@dashboard, params: variable_params(@dashboard)), class: "btn btn-info" %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
