--- a/app/views/blazer/_nav.html.erb
+++ b/app/views/blazer/_nav.html.erb
@@ -1,18 +1,18 @@
 <div class="btn-group" style="vertical-align: top; margin-right: 5px;">
-  <%= link_to "Home", root_path, class: "btn btn-primary" %>
+  <%= link_to t(".home", default: "Home"), root_path, class: "btn btn-primary" %>
   <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <span class="caret"></span>
-    <span class="sr-only">Toggle Dropdown</span>
+    <span class="sr-only"><%= t(".toggle_dropdown", default: "Toggle Dropdown") %></span>
   </button>
   <ul class="dropdown-menu">
-    <li><%= link_to "Checks", checks_path %></li>
+    <li><%= link_to t(".checks", default: "Checks"), checks_path %></li>
     <% if Blazer.uploads? %>
-      <li><%= link_to "Uploads", uploads_path %></li>
+      <li><%= link_to t(".uploads", default: "Uploads"), uploads_path %></li>
     <% end %>
     <li role="separator" class="divider"></li>
-    <li><%= link_to "New Query", new_query_path %></li>
-    <li><%= link_to "New Dashboard", new_dashboard_path %></li>
+    <li><%= link_to t(".new_query", default: "New Query"), new_query_path %></li>
+    <li><%= link_to t(".new_dashboard", default: "New Dashboard"), new_dashboard_path %></li>
     <% check_params = @query ? {query_id: @query.id} : {} %>
-    <li><%= link_to "New Check", new_check_path(check_params) %></li>
+    <li><%= link_to t(".new_check", default: "New Check"), new_check_path(check_params) %></li>
   </ul>
 </div>
