--- a/app/views/blazer/queries/home.html.erb
+++ b/app/views/blazer/queries/home.html.erb
@@ -53,7 +53,7 @@
     </tbody>
   </table>
 
-  <p v-if="more" class="text-muted">Loading...</p>
+  <p v-if="more" class="text-muted"><%= t("blazer.loading", default: "Loading...") %></p>
 </div>
 
 <script>
