--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -50,7 +50,7 @@
 
 <% if @success %>
   <div id="results">
-    <p class="text-muted">Loading...</p>
+    <p class="text-muted"><%= t("blazer.loading", default: "Loading...") %></p>
   </div>
 
   <script>
