--- a/app/views/blazer/checks/_form.html.erb
+++ b/app/views/blazer/checks/_form.html.erb
@@ -71,9 +71,9 @@
   <p class="text-muted">Emails <%= Blazer.slack? ? "and Slack notifications " : nil %>are sent when a check starts failing, and when it starts passing again.
   <p>
     <% if @check.persisted? %>
-      <%= link_to "Delete", check_path(@check), method: :delete, "data-confirm" => "Are you sure?", class: "btn btn-danger" %>
+      <%= link_to t("blazer.actions.delete", default: "Delete"), check_path(@check), method: :delete, "data-confirm" => t("blazer.are_you_sure", default: "Are you sure?"), class: "btn btn-danger" %>
     <% end %>
-    <%= f.submit "Save", class: "btn btn-success" %>
-    <%= link_to "Back", :back, class: "btn btn-link" %>
+    <%= f.submit t("blazer.actions.save", default: "Save"), class: "btn btn-success" %>
+    <%= link_to t("blazer.actions.back", default: "Back"), :back, class: "btn btn-link" %>
   </p>
 <% end %>
