--- a/app/views/blazer/uploads/_form.html.erb
+++ b/app/views/blazer/uploads/_form.html.erb
@@ -19,9 +19,9 @@
   </div>
   <p>
     <% if @upload.persisted? %>
-      <%= link_to "Delete", upload_path(@upload), method: :delete, "data-confirm" => "Are you sure?", class: "btn btn-danger" %>
+      <%= link_to t("blazer.actions.delete", default: "Delete"), upload_path(@upload), method: :delete, "data-confirm" => t("blazer.are_you_sure", default: "Are you sure?"), class: "btn btn-danger" %>
     <% end %>
-    <%= f.submit "Save", class: "btn btn-success" %>
-    <%= link_to "Back", :back, class: "btn btn-link" %>
+    <%= f.submit t("blazer.actions.save", default: "Save"), class: "btn btn-success" %>
+    <%= link_to t("blazer.actions.back", default: "Back"), :back, class: "btn btn-link" %>
   </p>
 <% end %>
