Adds support for displaying GeoJSON columns in a map

--- a/app/views/blazer/queries/docs.html.erb
+++ b/app/views/blazer/queries/docs.html.erb
@@ -118,7 +118,7 @@
     <tr>
       <td>Map</td>
       <td>
-        Named <code>latitude</code> and <code>longitude</code>, or <code>lat</code> and <code>lon</code>, or <code>lat</code> and <code>lng</code>
+        Named <code>latitude</code> and <code>longitude</code>, or <code>lat</code> and <code>lon</code>, or <code>lat</code> and <code>lng</code> or GeoJSON in a column containing <code>geojson</code>.
         <% if !blazer_maps? %>
           <br />
           <strong>Needs configured</strong>
