--- a/app/views/blazer/queries/_sharing_modal.html.erb
+++ b/app/views/blazer/queries/_sharing_modal.html.erb
@@ -12,12 +12,12 @@
 
         <div class="form-group">
           <label for="csvShare">CSV</label>
-          <input type="text" class="form-control" id="csvShare" readonly value="<%= Blazer.sharing.url_for(7, request.url, format: 'csv') %>">
+          <input type="text" class="form-control" id="csvShare" readonly value="<%= Blazer.sharing.url_for(@query.id, request.url, format: 'csv') %>">
         </div>
 
         <div class="form-group">
           <label for="csvShare">Google sheets</label>
-          <input type="text" class="form-control" id="googleShare" readonly value='=IMPORTDATA("<%= Blazer.sharing.url_for(7, request.url, format: 'csv') %>")'>
+          <input type="text" class="form-control" id="googleShare" readonly value='=IMPORTDATA("<%= Blazer.sharing.url_for(@query.id, request.url, format: 'csv') %>")'>
         </div>
       </div>
     </div>
