--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -247,5 +247,7 @@
 
       this.showEditor()
     }
-  }).mount("#app")
+  })
+  app.config.compilerOptions.whitespace = "preserve"
+  app.mount("#app")
 </script>
