--- a/app/views/blazer/queries/home.html.erb
+++ b/app/views/blazer/queries/home.html.erb
@@ -163,5 +163,7 @@
         }
       }
     }
-  }).mount("#queries")
+  })
+  app.config.compilerOptions.whitespace = "preserve"
+  app.mount("#queries")
 </script>
