Fixed deprecation warning [skip ci]

--- a/app/assets/stylesheets/blazer/bootstrap.css
+++ b/app/assets/stylesheets/blazer/bootstrap.css
@@ -5273,7 +5273,7 @@ a.thumbnail.active {
 .media,
 .media-body {
   overflow: hidden;
-  zoom: 1;
+  transform: scale(1);
 }
 .media-body {
   width: 10000px;
