--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -73,8 +73,9 @@
   <script>
     // do not highlight really long queries
     // this can lead to performance issues
-    if ($("code").text().length < 10000) {
-      hljs.highlightBlock(document.getElementById("code"));
+    var code = $("code")
+    if (code.text().length < 10000) {
+      hljs.highlightElement(code.get(0))
     }
   </script>
 <% end %>
