--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -73,7 +73,7 @@
   <script>
     // do not highlight really long queries
     // this can lead to performance issues
-    var code = $("code")
+    var code = $("#code code")
     if (code.text().length < 10000) {
       hljs.highlightElement(code.get(0))
     }
