--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -79,31 +79,7 @@
         <%= blazer_js_var "mapboxAccessToken", Blazer.mapbox_access_token %>
         <%= blazer_js_var "markers", @markers %>
         <%= blazer_js_var "mapId", map_id %>
-        L.mapbox.accessToken = mapboxAccessToken;
-        var map = L.mapbox.map(mapId)
-          .addLayer(L.mapbox.styleLayer('mapbox://styles/mapbox/streets-v11'));
-        var featureLayer = L.mapbox.featureLayer().addTo(map);
-        var geojson = [];
-        for (var i = 0; i < markers.length; i++) {
-          var marker = markers[i];
-          geojson.push({
-            type: 'Feature',
-            geometry: {
-              type: 'Point',
-              coordinates: [
-                marker.longitude,
-                marker.latitude
-              ]
-            },
-            properties: {
-              description: marker.title,
-              'marker-color': '#f86767',
-              'marker-size': 'medium'
-            }
-          });
-        }
-        featureLayer.setGeoJSON(geojson);
-        map.fitBounds(featureLayer.getBounds());
+        new Mapkick.Map(mapId, markers, {accessToken: mapboxAccessToken, tooltips: {hover: false, html: true}});
       </script>
     <% elsif chart_type == "line" %>
       <% chart_data = @columns[1..-1].each_with_index.map{ |k, i| {name: blazer_series_name(k), data: @rows.map{ |r| [r[0], r[i + 1]] }, library: series_library[i]} } %>
