--- a/app/views/blazer/queries/docs.html.erb
+++ b/app/views/blazer/queries/docs.html.erb
@@ -119,7 +119,7 @@
       <td>Map</td>
       <td>
         Named <code>latitude</code> and <code>longitude</code>, or <code>lat</code> and <code>lon</code>, or <code>lat</code> and <code>lng</code>
-        <% if !blazer_maps? %>
+        <% if !Blazer.maps? %>
           <br />
           <strong>Needs configured</strong>
         <% end %>
