Added support for maps from GeoJSON - closes #417
Co-authored-by: Kevin Marsh <kevin.marsh@gmail.com>

--- a/app/views/blazer/queries/docs.html.erb
+++ b/app/views/blazer/queries/docs.html.erb
@@ -125,6 +125,16 @@
         <% end %>
       </td>
     </tr>
+    <tr>
+      <td>Area Map</td>
+      <td>
+        Named <code>geojson</code>
+        <% if !Blazer.maps? %>
+          <br />
+          <strong>Needs configured</strong>
+        <% end %>
+      </td>
+    </tr>
   </tbody>
 </table>
 
