--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -52,7 +52,7 @@
     <p class="text-muted">Loading...</p>
   </div>
 
-  <script>
+  <script nonce="<%= content_security_policy_nonce %>">
     function showRun(data) {
       $("#results").html(data)
       $("#results table").stupidtable(stupidtableCustomSettings).stickyTableHeaders({fixedOffset: 60})
@@ -69,7 +69,7 @@
 <% end %>
 
 <% unless %w(mongodb).include?(Blazer.data_sources[@query.data_source].adapter) %>
-  <script>
+  <script nonce="<%= content_security_policy_nonce %>">
     // do not highlight really long queries
     // this can lead to performance issues
     var code = $("#code code")
