--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -1,11 +1,5 @@
 <% blazer_title @query.name %>
 
-<% if @success %>
-  <% run_data = {statement: @query.statement, query_id: @query.id, data_source: @query.data_source, variables: variable_params(@query)} %>
-  <% run_data.merge!(forecast: "t") if params[:forecast] %>
-  <% run_data.merge!(cohort_period: params[:cohort_period]) if params[:cohort_period] %>
-<% end %>
-
 <div class="topbar">
   <div class="container">
     <div class="row" style="padding-top: 13px;">
@@ -20,7 +14,7 @@
         <%= link_to "Fork", new_query_path(params: {variables: variable_params(@query), fork_query_id: @query.id, data_source: @query.data_source, name: @query.name}), class: "btn btn-info" %>
 
         <% if !@error && @success %>
-          <%= button_to "Download", run_queries_path(format: "csv"), params: run_data, class: "btn btn-primary" %>
+          <%= button_to "Download", run_queries_path(format: "csv"), params: @run_data, class: "btn btn-primary" %>
         <% end %>
       </div>
     </div>
@@ -62,7 +56,7 @@
       $("#results").addClass("query-error").html(message)
     }
 
-    <%= blazer_js_var "data", run_data %>
+    <%= blazer_js_var "data", @run_data %>
 
     runQuery(data, showRun, showError)
   </script>
