add .table-responsive css class to .results-container

--- a/app/views/blazer/queries/_cohorts.html.erb
+++ b/app/views/blazer/queries/_cohorts.html.erb
@@ -1,3 +1,4 @@
+Resolving dependencies...
 <% unless @only_chart %>
   <%= render partial: "caching" %>
   <p class="text-muted" style="margin-bottom: 10px;">
@@ -5,7 +6,7 @@
   </p>
 <% end %>
 <% if @rows.any? %>
-  <div class="results-container">
+  <div class="results-container table-responsive">
     <table class="table results-table">
       <thead>
         <tr>
