Add .table-responsive to .results-container

--- a/app/views/blazer/queries/_cohorts.html.erb
+++ b/app/views/blazer/queries/_cohorts.html.erb
@@ -5,7 +5,7 @@
   </p>
 <% end %>
 <% if @rows.any? %>
-  <div class="results-container">
+  <div class="results-container table-responsive">
     <table class="table results-table">
       <thead>
         <tr>
