Fixed target line style [skip ci]

--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -66,7 +66,7 @@
     <% target_index = @columns.index { |k| k.downcase == "target" } %>
     <% if target_index %>
       <% color = "#109618" %>
-      <% series_library[target_index - 1] = {pointStyle: "line", hitRadius: 5, borderColor: color, pointBackgroundColor: color, backgroundColor: color, pointHoverBackgroundColor: color} %>
+      <% series_library[target_index - 1] = {pointStyle: "line", pointBorderWidth: 0, hitRadius: 5, borderColor: color, pointBackgroundColor: color, backgroundColor: color, pointHoverBackgroundColor: color} %>
     <% end %>
     <% if @forecast %>
       <% color = "#54a3ee" %>
