--- a/lib/generators/blazer/templates/config.yml.tt
+++ b/lib/generators/blazer/templates/config.yml.tt
@@ -56,6 +56,9 @@ audit: true
 # webhook for Slack
 # slack_webhook_url: <%%= ENV["BLAZER_SLACK_WEBHOOK_URL"] %>
 
+# base controller for Blazer::BaseController
+# base_controller: ApplicationController
+
 check_schedules:
   - "1 day"
   - "1 hour"
